2000-07-24  Andreas Jaeger  <aj@suse.de>

	* string/Makefile ($(objpfx)tst-svc.out): Fix rule to read from
	input from stdin and setup environment.

2000-07-24  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/m68k/mmap.S: Remove mmap64 alias.

2000-07-23  Ulrich Drepper  <drepper@redhat.com>

	* string/endian.h: Explain the _*_ENDIAN constant values a bit
	more.  Patch by scarlet@mit.edu [PR libc/1799].

	* io/ftwtest-sh: Add -f parameter to chmod if -R is also given.
	[PR libc/1792].

	* argp/argp-parse.c (parser_finalize): Reverse order in which
	parsers are run for ARGP_KEY_END.  [PR libc/1755].

	* grp/initgroups.c (initgroups): Don't limit the possible number
	of groups to NGROUPS_MAX.  Allow dynamic resizing.  Loop around
	the setgroups call while the call fails and descrease the number
	of groups each round.
	The name of the initgroups function in the NSS modules changed.
	(compat_call): Adapt for dynamic resizing.
	* hesiod/nss_hesiod/hesiod-grp.c (_nss_hesiod_initgroups_dyn):
	Implement dynamic resizing.
	* nis/nss_compat/compat-initgroups.c (_nss_compat_initgroups_dyn):
	Likewise.
	* nis/nss_nis/compat-initgroups.c (_nss_nis_initgroups_dyn): Likewise.
	* hesiod/Versions: Change exported interface name.
	* nis/Versions: Change exported interface name.

2000-07-23  Ulrich Drepper  <drepper@redhat.com>

	* locale/iso-639.def: Some errors corrected.
	Patch by Keld Simonsen.

	* include/limits.h: Update non-gcc portion.
	Patch by Joseph S. Myers <jsm28@cam.ac.uk>.

2000-07-22  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/brk.c (_hurd_set_brk): When shrinking the
	program's data space, reallocate only the space that was just
	deallocated to release its backing space.

2000-07-23  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/vfprintf.c (process_string_arg): For wide character
	version, handle precision also correctly.

	* nss/nss_files/files-hosts.c: Correct problem with three or more
	entries with the same name.
